--- a/sockets/public/index.html
+++ b/sockets/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Sockets Example</title>
+    <script
+  src="http://code.jquery.com/jquery-2.2.4.min.js"
+  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+  crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.min.js"></script>
@@ -11,13 +15,130 @@
     <script type="text/javascript" src="libraries/effects/seriously.blur.js"></script>
     <script type="text/javascript" src="libraries/effects/seriously.chroma.js"></script>
     <script type="text/javascript" src="sketch.js"></script>
-
+    
     <style>
-      #p5canvas {
-        transform: scale(2);
+      body {
+        height: 100%;
+        width: 100%;
+        margin: 0;
       }
+      #p5canvas {
+        transform: translate(200px, -720px) scale(2);
+      }
+      .news-section{
+        display: flex;
+        
+      }
+      .news-black-cover {
+        background: rgba(0,0,0,0.3);
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        overflow: hidden;
+        left: 0px;
+        top: 0px;
+        z-index: 0;
+      }
+      .news-block {
+        width: 400px;
+        height: 300px;
+        border-radius: 10px;
+        background: #ccc;
+        margin: 20px;
+        padding: 20px 25px;
+        font-size: 30px;
+        font-family: Gotham;
+        background: url('images/bg2.png');
+        background-size: cover;
+        color: #FFF;
+        position: relative;
+        overflow: hidden;
+      }
+      .news-title {
+        position: relative;
+      }
+      .news-description{
+        position: relative;
+        font-size: 15px;
+        color: #FFF;
+        font-weight: 300;
+      }
+      .instruction {
+        width: 70%;
+        height: 80%;
+        margin: 5% 15%;
+        background: #ccc;
+        padding: 30px;
+      }
+      .countdown {
+        color: #FFF;
+        font-size: 100px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .startBtn {
+        border: 3px solid #fff;
+        padding; 15px 30px;
+        width: 200px;
+        height: 90px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #FFF;
+        font-size: 30px;
+        cursor: pointer;
+      }
+      .wrap {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        background-repeat: no-repeat;
+        background-position: 200px 0px;
+      }
+      .tv{
+        height: 160px;
+        width: 240px;
+        position: absolute;
+        top: 50px;
+        left: 200px;
+      }
+      .template{
+        height: 480px;
+        width: 640px;
+        top: 0px;
+        left: 200px;
+        z-index: 100;
+        position: absolute;
+      }
+      .subtitle {
+        position: absolute;
+        z-index: 100;
+        top: 345px;
+        left: 260px;
+        font-family: Gotham;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 1.6em;
+      }
+      .tele-subtitle {
+        color: #FFF;
+        font-size: 50px;
+        width: 100%;
+        padding: 50px;
+      }
+
     </style>
   </head>
   <body>
+    <div class="wrap">
+      <div class="startBtn">Start</div>
+      <div class="news-section">
+    </div>
+    </div>
   </body>
 </html>
