--- a/sockets/public/index.html
+++ b/sockets/public/index.html
@@ -196,6 +196,17 @@
         text-decoration: underline;
         font-family: Gotham;
       }
+      a.repo-btn {
+        border-radius: 4px;
+        padding: 10px 30px;
+        background: #FFF;
+        color: #000;
+        text-decoration: none;
+        font-weight: 400;
+      }
+      .repo-section {
+        width: 100%;
+      }
 
     </style>
   </head>
